tests/should-fail/stringhash-collision.j
globals
    integer x = StringHash("Foo")
endglobals

function bla takes nothing returns nothing
    call StringHash("foo")
endfunction